# Data-Version-Control

./: .dvcignore  .gitignore  README.md  pyproject.toml
course_ds_base/: .gitignore  params.yaml
course_ds_base/data/processed/: .gitignore  test_iris.csv  train_iris.csv
course_ds_base/models/: model.joblib
course_ds_base/notebooks/: step-1-organize-ml-project.ipynb  step-2-create-config-file.ipynb  step-3-move-reusable-code.ipynb  step-4-ml-pipeline.ipynb
course_ds_base/src/stages/: data_load.py  data_split.py  evaluate.py  featurize.py  train.py
course_ds_base/src/train/: train.py
dvc-sample1/: .gitignore  dvc.yaml
dvc-sample1/notebooks/: step-0-prototype.ipynb
dvc-sample1/src/stages/: data_load.py  data_split.py  evaluate.py  featurize.py  train.py
