[tool.poetry]
name = "course-ds-base"
version = "0.1.0"
description = ""
authors = ["Jay Patel <jaypatel.arn@gmail.com>"]
readme = "README.md"
packages = [{include = "course_ds_base"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
