[tool.poetry]
name = "course-ds-base"
version = "0.1.0"
description = ""
authors = ["Jay Patel <jaypatel.arn@gmail.com>"]
readme = "README.md"
packages = [{include = "course_ds_base"}]

[tool.poetry.dependencies]
dvc = {extras = ["s3"], version = "^2.30.0"}
joblib = "^1.2.0"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
pandas = "^1.5.1"
pytest = "^7.1.3"
python = "^3.9"
python-box = "^6.0.2"
pyyaml = "^6.0"
scikit-learn = "^1.1.2"
scipy = "^1.9.3"
tqdm = "^4.64.1"
openpyxl = "^3.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
